--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,3 @@
-argument. db.Integer specifies the data in that column should be an Integer. Every row must have a primary key set to it. By default the Column class has primary_key set to False. We want to set it to True on the id column to set it as the primary_key column.<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,30 +6,19 @@ argument. db.Integer specifies the data in that column should be an Integer. Eve
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        
-
-
-
-
-
-
-
-
-
-
-
 
     <title>Document</title>
 </head>
 <style>
     body {
-        background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.setaswall.com%2Fwp-content%2Fuploads%2F2017%2F07%2FBlack-Wallpapers-14-1440-x-900.png&f=1&nofb=1);
+        background-color: rgb(17, 16, 16);
+        /* background-image: url(https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.setaswall.com%2Fwp-content%2Fuploads%2F2017%2F07%2FBlack-Wallpapers-14-1440-x-900.png&f=1&nofb=1); */
     }
 
     nav {
         display: flex;
         justify-content: space-between;
-        background-color: rgb(4, 4, 54) transparent;
+        background-color: rgb(4, 4, 54)transparent ;
     }
 
     ul {
@@ -40,16 +28,21 @@ argument. db.Integer specifies the data in that column should be an Integer. Eve
 
 <body>
     <nav class="p-3">
-        <a href="#" style="color:whitesmoke;font-weight: bolder; font-size: 30px;">Pitch</a>
+        <a href="#" style="font-weight: bolder; font-size: 30px;">Pitch</a>
         <ul>
             <div class="btn">
+                <a href="{{url_for('auth.login')}}">
+                    <button class="btn btn-outline-primary float-left " style="border-radius: 10px;">Sign In</button>
+                </a>
 
-                <button class="btn btn-outline-primary float-left " style="border-radius: 10px;">Sign In</button>
             </div>
+            
             <div class="btn">
-
-                <button class="btn btn-primary float-left"
-                    style="color: antiquewhite;border-radius: 10px;font-weight: bold;">Try for free</button>
+                <a href="{{url_for('auth.login')}}">
+                    <button class="btn btn-primary float-left"
+                    style="border-radius: 10px;font-weight: bold;">Sign Out</button>
+                </a>
+                
             </div>
         </ul>
     </nav>
@@ -60,11 +53,7 @@ argument. db.Integer specifies the data in that column should be an Integer. Eve
 
             </div>
             <div class="col-md-9">
-                <div class="card">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae odio reprehenderit ea et
-                        optio
-                        illo enim ab molestias aut aliquam ex fugiat, corrupti commodi in hic, quos vero modi? Pariatur!
-                    </p>
+                <div class="">
 
                 </div>
 
