--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -5,11 +5,11 @@
     <div class="row">
         <!-- displaying  Username-->
         <div class="col-md-4">
-            <h3> {{user.username| capitalize}} </h3>
+            <h3>Username-- {{user.username| capitalize}} </h3>
 
             <!--Displaying user bio-->
             {% if user.bio %}
-            <p> {{user.bio}}</p>
+            <p> Your Bio-- {{user.bio}}</p>
             {%else%}
             <p> {{user.username| capitalize}} has no bio </p>
             {% endif %}
@@ -21,6 +21,7 @@
             {% if user.profile_pic_path %}
             <a href="{{url_for('main.update_profile',uname=user.username)}}">Edit profile</a>
             <img src="{{url_for('static',filename=user.profile_pic_path)}}" alt="" class="img-thumbnail">
+            {{user.profile_pic_path}}
             {%else%}
             <p>No profile picture</p>
             {% endif %}
