the UI for my pitches in pitch.html file

--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -26,7 +26,7 @@ integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw
       {% endfor %}
       <!-- Login form -->
       {{wtf.quick_form(login_form)}}
-      <p> Don't have an account?<button class="btn btn-primary"><a href="{{url_for('auth.register')}}"><b style="color:white;">Sign up here</b></button> </a></p>
+      <p> Don't have an account?<button class="btn btn-primary"><a href="{{url_for('auth.register')}}"><b style="color:white;font-weight: bold;">Sign up here</b></button> </a></p>
      </div>
      <div clas="col-md-2"> </div>
     </div>
