--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -6,8 +6,12 @@
     <div class="row">
         <div class="col-md-2"> </div>
         <div class="col-md-8">
+            <p style="margin-bottom: 70px;">
 
-            {{wtf.quick_form(registration_form)}}
+                {{wtf.quick_form(registration_form)}}
+            </p>
+
+
 
         </div>
         <div class="col-md-2"></div>
