--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -2,23 +2,26 @@
 {% import 'bootstrap/wtf.html' as wtf%}
 
 {% block content %}
-<div class="container">
-    <div class="row">
-        <div class="col-md-2"> </div>
-        <div class="col-md-8">
-            <!--Flash message -->
-            {% for message in get_flashed_messages() %}
-            <div class="alert alert-danger">
-                <button type="button" class="close" data-dismiss="alert">&times;</button>
-                {{ message }}
+<div class="body" style="background-color: transparent;">
+    <div class="container card" >
+        <div class="row">
+            <div class="col-md-2"> </div>
+            <div class="col-md-8">
+                <!--Flash message -->
+                {% for message in get_flashed_messages() %}
+                <div class="alert alert-danger">
+                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    {{ message }}
+                </div>
+                {% endfor %}
+                <!-- Login form -->
+                {{wtf.quick_form(login_form)}}
+                <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
             </div>
-            {% endfor %}
-            <!-- Login form -->
-            {{wtf.quick_form(login_form)}}
-            <p> Don't have an account? <a href="{{url_for('auth.register')}}">Sign up here</a></p>
+            <div clas="col-md-2"> </div>
         </div>
-        <div clas="col-md-2"> </div>
     </div>
 </div>
+
 
 {% endblock%}
