--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,10 +1,14 @@
-<ul class="nav navbar-nav navbar-right">
-    {% if current_user.is_authenticated %}
-    <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
-    <li style="color:white;padding:15px;">{{current_user.username}}</li>
-    <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
-    {% else %}
-    <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
-    {%endif%}
-</ul>
+
+<div class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+    <ul class="nav navbar-nav navbar-right">
+        {% if current_user.is_authenticated %}
+        <li><a href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a></li>
+        <li style="color:white;padding:15px;">{{current_user.username}}</li>
+        <li><a href="{{url_for('auth.logout')}}">Sign out</a></li>
+        {% else %}
+        <li><a href="{{url_for('auth.login')}}">Sign in</a></li>
+        {%endif%}
+    </ul>
+</div>
+
 #....
